test/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: test
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: nuvexa-test.local
      http:
        paths:
          - path: /api/vehiculos
            pathType: Prefix
            backend:
              service:
                name: vehiculos-service
                port:
                  number: 3000
          - path: /api/conductores
            pathType: Prefix
            backend:
              service:
                name: personal-service
                port:
                  number: 3000
          - path: /api/pasajeros
            pathType: Prefix
            backend:
              service:
                name: personal-service
                port:
                  number: 3000
